# MplConfig

./: .gitignore  README.md  pyproject.toml  requirements.txt  setup.cfg
src/MplConfig/: __init__.py  main.py
